# foleys_video_engine

./: .clang-format  .gitignore  BREAKING-CHANGES.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  KNOWN-ISSUES.md  LICENSE.md  LICENSE_8md.html  LevelMeterLookAndFeelMethods_8h.html  LevelMeterLookAndFeelMethods_8h.js  LevelMeterLookAndFeel_8h.html  LevelMeterLookAndFeel_8h.js  LevelMeterSource_8h.html  LevelMeterSource_8h.js  LevelMeter_8cpp.html  LevelMeter_8h.html  LevelMeter_8h.js  MainComponent_8h.html  MainComponent_8h.js  Makefile  MultiCamTest_2Source_2MainComponent_8cpp.html  MultiCamTest_2Source_2Main_8cpp.html  MultiCamTest_2Source_2Main_8cpp.js  OSDComponent_8h.html  OSDComponent_8h.js  OutlineBuffer_8h.html  OutlineBuffer_8h.js  README.md  README_8md.html  SoundFieldLookAndFeelMethods_8h.html  SoundFieldLookAndFeelMethods_8h.js  StereoFieldBuffer_8h.html  StereoFieldBuffer_8h.js  StereoFieldComponent_8h.html  StereoFieldComponent_8h.js  VideoPlayer_2Source_2MainComponent_8cpp.html  VideoPlayer_2Source_2MainComponent_8cpp.js  VideoPlayer_2Source_2Main_8cpp.html  VideoPlayer_2Source_2Main_8cpp.js  (+708 more)
Basics/: AudioFifo.cpp  AudioFifo.h  Automation.cpp  Automation.h  Structures.h  Usage.cpp  Usage.h  VideoEngine.cpp  VideoEngine.h  VideoFifo.cpp  VideoFifo.h  foleys_AudioFifo.cpp  foleys_AudioFifo.h  foleys_CameraManager.cpp  foleys_CameraManager.h  foleys_CameraManager.mm  foleys_Structures.h  foleys_TimeCodeAware.cpp  foleys_TimeCodeAware.h  foleys_Usage.cpp  foleys_Usage.h  foleys_VideoEngine.cpp  foleys_VideoEngine.h  foleys_VideoFifo.cpp  foleys_VideoFifo.h  foleys_VideoFrame.h
CMakeIncludes/: System.cmake
Clips/: AVClip.cpp  AVClip.h  AVCompoundClip.cpp  AVCompoundClip.h  AVImageClip.cpp  AVImageClip.h  AVMovieClip.cpp  AVMovieClip.h  AudioClip.cpp  AudioClip.h  ClipDescriptor.cpp  ClipDescriptor.h  ComposedClip.cpp  ComposedClip.h  ImageClip.cpp  ImageClip.h  MovieClip.cpp  MovieClip.h  foleys_AVClip.cpp  foleys_AVClip.h  foleys_AudioClip.cpp  foleys_AudioClip.h  foleys_CameraClip.cpp  foleys_CameraClip.h  foleys_ClipDescriptor.cpp  foleys_ClipDescriptor.h  foleys_ComposedClip.cpp  foleys_ComposedClip.h  foleys_ImageClip.cpp  foleys_ImageClip.h  foleys_MovieClip.cpp  foleys_MovieClip.h
Maths/: Structures.h
Plugins/: AudioPluginManager.cpp  AudioPluginManager.h  ColourCurveVideoProcessor.h  PanningAudioProcessor.h  PositioningVideoProcessor.h  VideoPluginManager.cpp  VideoPluginManager.h  VideoProcessor.h  foleys_AudioPluginEditorManager.cpp  foleys_AudioPluginEditorManager.h  foleys_AudioPluginManager.cpp  foleys_AudioPluginManager.h  foleys_ColourCurveVideoProcessor.h  foleys_PanningAudioProcessor.h  foleys_PositioningVideoProcessor.h  foleys_VideoPluginManager.cpp  foleys_VideoPluginManager.h  foleys_VideoProcessor.h
Processing/: AudioMixer.h  CompositingContext.h  DefaultAudioMixer.cpp  DefaultAudioMixer.h  PanningAudioProcessor.h  ParameterAutomation.cpp  ParameterAutomation.h  ProcessorController.cpp  ProcessorController.h  ProcessorParameter.cpp  ProcessorParameter.h  SoftwareCompositingContext.cpp  SoftwareCompositingContext.h  SoftwareVideoMixer.cpp  SoftwareVideoMixer.h  VideoMixer.h  foleys_AudioMixer.h  foleys_ColourLookuptables.h  foleys_ControllableBase.cpp  foleys_ControllableBase.h  foleys_DefaultAudioMixer.cpp  foleys_DefaultAudioMixer.h  foleys_ParameterAutomation.cpp  foleys_ParameterAutomation.h  foleys_ProcessorController.cpp  foleys_ProcessorController.h  foleys_ProcessorParameter.cpp  foleys_ProcessorParameter.h  foleys_SoftwareVideoMixer.cpp  foleys_SoftwareVideoMixer.h  foleys_VideoMixer.h
ReadWrite/: AVFormatManager.cpp  AVFormatManager.h  AVReader.cpp  AVReader.h  AVWriter.h  ClipBouncer.cpp  ClipBouncer.h  ClipRenderer.h  FFmpegReader.cpp  FFmpegReader.h  foleys_AVFormatManager.cpp  foleys_AVFormatManager.h  foleys_AVReader.h  foleys_AVWriter.h  foleys_ClipRenderer.cpp  foleys_ClipRenderer.h
Widgets/: AVComponent.cpp  AVComponent.h  AudioStrip.cpp  AudioStrip.h  FilmStrip.cpp  FilmStrip.h  VideoPreview.cpp  VideoPreview.h  foleys_AudioStrip.cpp  foleys_AudioStrip.h  foleys_FilmStrip.cpp  foleys_FilmStrip.h  foleys_OpenGLDraw.h  foleys_OpenGLView.cpp  foleys_OpenGLView.h  foleys_SoftwareView.cpp  foleys_SoftwareView.h  foleys_VideoPreview.cpp  foleys_VideoPreview.h  foleys_VideoView.h
cmake/: AddCPM.cmake  CPM.cmake  FindFFmpeg.cmake  FindJUCE.cmake  Findffmpeg.cmake  FoleysDefaultSettings.cmake  FoleysDefaultTarget.cmake  config.cmake
doc/: AVClip_8cpp.html  AVClip_8h.html  AVFormatManager_8cpp.html  AVFormatManager_8h.html  AVReader_8h.html  AVWriter_8h.html  AudioClip_8cpp.html  AudioClip_8h.html  AudioFifo_8cpp.html  AudioFifo_8h.html  AudioStrip_8cpp.html  AudioStrip_8h.html  Automation_8h.html  CONTRIBUTING_8md.html  ClipBouncer_8cpp.html  ClipBouncer_8h.html  ComposedClip_8cpp.html  ComposedClip_8h.html  CompositingContext_8h.html  (+129 more)
examples/MultiCamTest/: CMakeLists.txt  MultiCamTest.jucer
examples/MultiCamTest/Source/: Main.cpp  MainComponent.h  _clang-format
examples/VideoEditor/: CMakeLists.txt
examples/VideoEditor/Source/: CMakeLists.txt  ClipProperties.cpp  ClipProperties.h  Library.cpp  Library.h  Main.cpp  MainComponent.cpp  MainComponent.h  Player.cpp  Player.h  PlayerWindow.cpp  PlayerWindow.h  ProcessorComponent.cpp  ProcessorComponent.h  Properties.cpp  Properties.h  RenderDialog.cpp  RenderDialog.h  TimeLine.cpp  TimeLine.h  TransportControl.cpp  TransportControl.h  ffmpeg.xcconfig
examples/VideoPlayer/: CMakeLists.txt
examples/VideoPlayer/Source/: CMakeLists.txt  Main.cpp  MainComponent.cpp  OSDComponent.h
modules/ffmpeg/: CMakeLists.txt  README.md
modules/ffmpeg/cmake/: ConfigureFFmpegBuild.cmake  FFmpegMacBuild.cmake  ffmpeg-config.cmake
modules/foleys_video_addons/Tests/MultiCamTest/: CMakeLists.txt
modules/foleys_video_addons/Tests/MultiCamTest/Source/: MainComponent.cpp
modules/foleys_video_addons/Tests/VideoPlayer/: CMakeLists.txt  VideoPlayer.jucer
modules/foleys_video_addons/Tests/VideoPlayer/Source/: Main.cpp  MainComponent.cpp
tests/: CMakeLists.txt  TestAppMain.cpp
(+3427 files in other folders)
